Implement RecyclerView with data rendering, API handling, and resource integration - Set up RecyclerView with ViewHolder and Adapter for efficient list rendering - Implement API response handling with sealed classes and error states - Integrated Glide for image loading and Airbnb Lottie for animations - Added necessary resources (layouts, drawables, and animations) - Ensured smooth UI experience with optimized data binding and performance improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">OnBoardX</string>
+    <string name="welcome_to">Welcome to</string>
+    <string name="onboarding">Onboarding</string>
+    <string name="item_dummy_text">Buy gold anytime, anywhere</string>
+    <string name="save_button_dummy_text">Save in Gold</string>
 </resources>
